Add possible captures when starting a new game